--- a/vercel.json
+++ b/vercel.json
@@ -1,42 +1,4 @@
 {
   "buildCommand": "",
-  "outputDirectory": ".",
-  "env": {
-    "API_BASE_URL": "@api_base_url",
-    "PRICE_API_BASE": "@price_api_base",
-    "SELLER_API_BASE": "@seller_api_base"
-  },
-  "routes": [
-    {
-      "src": "/index.html",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/profile.html",
-      "dest": "/profile.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3600, must-revalidate"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
-        }
-      ]
-    }
-  ]
+  "outputDirectory": "."
 }
