--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,4 @@
 {
   "buildCommand": "",
-  "outputDirectory": ".",
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(?!.*\\.)",
-      "dest": "/index.html"
-    }
-  ]
+  "outputDirectory": "."
 }
